set(BS_FRAMEWORK_VERSION_MAJOR 1)
set(BS_FRAMEWORK_VERSION_MINOR 1)
set(BS_FRAMEWORK_VERSION_PATCH 0)
set(BS_FRAMEWORK_CURRENT_RELEASE_YEAR 2020)

set(BS_FRAMEWORK_PREBUILT_DEPENDENCIES_VERSION 11)
set(BS_FRAMEWORK_SRC_DEPENDENCIES_VERSION 1)
set(BS_FRAMEWORK_BUILTIN_ASSETS_VERSION 7)

# audio

# physics

#render module

add_subdirectory(Foundation)